--- a/Salary Prediction Notebook.ipynb
+++ b/Salary Prediction Notebook.ipynb
@@ -2186,7 +2186,9 @@
         "from sklearn.linear_model import LinearRegression\n",
         "from sklearn.ensemble import RandomForestRegressor\n",
         "from sklearn.preprocessing import PolynomialFeatures\n",
-        "from sklearn.ensemble import GradientBoostingRegressor\n"
+        "from sklearn.ensemble import GradientBoostingRegressor\n",
+        "from sklearn.pipeline import Pipeline\n",
+        "from sklearn.base import BaseEstimator, TransformerMixin"
       ],
       "execution_count": 0,
       "outputs": []
